--- a/index.html
+++ b/index.html
@@ -19,42 +19,50 @@
     <h1><img src="./assets/images/icon-star.svg" alt="">FAQs</h1>
     <ul>
       <li>
-        <div>
+        <div class="item-heading">
           <h2>What is Frontend Mentor, and how will it help me?</h2>
-          <label for="first">first</label>
           <input type="checkbox" id="first">
+          <label for="first">first</label>
         </div>
-        <p>Frontend Mentor offers realistic coding challenges to help developers improve their
-          frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
-          all levels and ideal for portfolio building.</p>
+        <div class="item-content">
+          <p>Frontend Mentor offers realistic coding challenges to help developers improve their
+            frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
+            all levels and ideal for portfolio building.</p>
+        </div>
       </li>
       <li>
-        <div>
+        <div class="item-heading">
           <h2>Is Frontend Mentor free?</h2>
-          <label for="second">second</label>
           <input type="checkbox" id="second">
+          <label for="second">second</label>
         </div>
-        <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free
-          option providing access to a range of projects suitable for all skill levels.</p>
+        <div class="item-content">
+          <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free
+            option providing access to a range of projects suitable for all skill levels.</p>
+        </div>
       </li>
 
       <li>
-        <div>
+        <div class="item-heading">
           <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
-          <label for="third">third</label>
           <input type="checkbox" id="third">
+          <label for="third">third</label>
         </div>
-        <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-          way to showcase your skills to potential employers!</p>
+        <div class="item-content">
+          <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+            way to showcase your skills to potential employers!</p>
+        </div>
       </li>
       <li>
-        <div>
+        <div class="item-heading">
           <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
-          <label for="fourth">fourth</label>
           <input type="checkbox" id="fourth">
+          <label for="fourth">fourth</label>
         </div>
-        <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help
-          channel where you can ask questions and seek support from other community members.</p>
+        <div class="item-content">
+          <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help
+            channel where you can ask questions and seek support from other community members.</p>
+        </div>
       </li>
     </ul>
   </main>
