--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <ul>
       <li>
         <div class="item-heading">
-          <h2>What is Frontend Mentor, and how will it help me?</h2>
           <input type="checkbox" id="first">
-          <label for="first">first</label>
+          <label for="first">What is Frontend Mentor, and how will it help me?</label>
         </div>
         <div class="item-content">
           <p>Frontend Mentor offers realistic coding challenges to help developers improve their
@@ -32,21 +31,18 @@
       </li>
       <li>
         <div class="item-heading">
-          <h2>Is Frontend Mentor free?</h2>
           <input type="checkbox" id="second">
-          <label for="second">second</label>
+          <label for="second">Is Frontend Mentor free?</label>
         </div>
         <div class="item-content">
           <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free
             option providing access to a range of projects suitable for all skill levels.</p>
         </div>
       </li>
-
       <li>
         <div class="item-heading">
-          <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
           <input type="checkbox" id="third">
-          <label for="third">third</label>
+          <label for="third">Can I use Frontend Mentor projects in my portfolio?</label>
         </div>
         <div class="item-content">
           <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
@@ -55,9 +51,8 @@
       </li>
       <li>
         <div class="item-heading">
-          <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
           <input type="checkbox" id="fourth">
-          <label for="fourth">fourth</label>
+          <label for="fourth">How can I get help if I'm stuck on a Frontend Mentor challenge?</label>
         </div>
         <div class="item-content">
           <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help
