--- a/index.html
+++ b/index.html
@@ -5,63 +5,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
+  <script defer src="index.js"></script>
   <title>Frontend Mentor | FAQ accordion</title>
 
 </head>
 
 <body>
-  <!-- place background and on body -->
   <main>
-    <h1><img src="./assets/images/icon-star.svg" alt="">FAQs</h1>
+    <h1 aria-label="Frequently asked questions"><img class="logo" src="./assets/images/icon-star.svg" alt="">FAQs</h1>
     <ul>
       <li>
-        <div class="item-heading">
-          <input type="checkbox" id="first">
-          <label for="first">What is Frontend Mentor, and how will it help me?</label>
+        <h2><button aria-expanded="false">What is Frontend Mentor, and how will it help me?</button></h2>
         </div>
-        <div class="item-content">
+        <div class="answer" hidden>
           <p>Frontend Mentor offers realistic coding challenges to help developers improve their
-            frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
+            frontend coding skills with projects in html, css, and javascript. it's suitable for
             all levels and ideal for portfolio building.</p>
         </div>
       </li>
       <li>
-        <div class="item-heading">
-          <input type="checkbox" id="second">
-          <label for="second">Is Frontend Mentor free?</label>
-        </div>
-        <div class="item-content">
+        <h2><button aria-expanded="false">Is Frontend Mentor free?</button></h2>
+        <div class="answer" hidden>
           <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free
             option providing access to a range of projects suitable for all skill levels.</p>
         </div>
       </li>
       <li>
-        <div class="item-heading">
-          <input type="checkbox" id="third">
-          <label for="third">Can I use Frontend Mentor projects in my portfolio?</label>
-        </div>
-        <div class="item-content">
+        <h2>
+          <button aria-expanded="false">Can I use Frontend Mentor projects in my portfolio?</button>
+        </h2>
+        <div class="answer" hidden>
           <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
             way to showcase your skills to potential employers!</p>
         </div>
       </li>
       <li>
-        <div class="item-heading">
-          <input type="checkbox" id="fourth">
-          <label for="fourth">How can I get help if I'm stuck on a Frontend Mentor challenge?</label>
+        <h2>
+          <button aria-expanded="false">How can I get help if I'm stuck on a challenge?
+          </button>
+        </h2>
         </div>
-        <div class="item-content">
+        <div class="answer" hidden>
           <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help
             channel where you can ask questions and seek support from other community members.</p>
         </div>
       </li>
     </ul>
   </main>
-
 </body>
 
 </html>
