--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <main>
-    <h1 aria-label="Frequently asked questions"><img class="logo" src="./assets/images/icon-star.svg" alt="">FAQs</h1>
+    <h1><img class="logo" src="./assets/images/icon-star.svg" alt="">FAQs</h1>
     <ul>
       <li>
         <h2><button aria-expanded="false">What is Frontend Mentor, and how will it help me?</button></h2>
